--- a/IoTSensorPortal/IoTSensorPortal/appsettings.json
+++ b/IoTSensorPortal/IoTSensorPortal/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-IoTSensorPortal-8AB64339-887E-47DB-92A8-FA54CAABAD32;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-CVNJNIN; Initial Catalog=IoTSensorPortalDb; User Id=didox2; Password=680684060"
   },
   "Logging": {
     "IncludeScopes": false,
