--- a/IoTSensorPortal/IoTSensorPortal/IoTSensorPortal.csproj
+++ b/IoTSensorPortal/IoTSensorPortal/IoTSensorPortal.csproj
@@ -5,17 +5,20 @@
     <UserSecretsId>aspnet-IoTSensorPortal-8AB64339-887E-47DB-92A8-FA54CAABAD32</UserSecretsId>
   </PropertyGroup>
 
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" PrivateAssets="All" />
-  </ItemGroup>
-
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.1" />
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IoTSensorPortal.Core\IoTSensorPortal.Core.csproj" />
+    <ProjectReference Include="..\IoTSensorPortal.Infrastructure.Data\IoTSensorPortal.Infrastructure.Data.csproj" />
   </ItemGroup>
 
 </Project>
