--- a/IoTSensorPortal/IoTSensorPortal/appsettings.json
+++ b/IoTSensorPortal/IoTSensorPortal/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=DESKTOP-KK311K5; Initial Catalog=IoTSensorPortalDb; User Id=didox2; Password=680684060",
-    "DefaultConnection": "Server=tcp:ms-sql-server.database.windows.net,1433;Initial Catalog=IoTSensorPortalDb;Persist Security Info=False;User ID=didox2;Password=680684060Dido1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=BEAST; Initial Catalog=IoTSensorPortalDb; User Id=didox2; Password=680684060"
+    //"DefaultConnection": "Server=tcp:ms-sql-server.database.windows.net,1433;Initial Catalog=IoTSensorPortalDb;Persist Security Info=False;User ID=didox2;Password=680684060Dido1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
